Fix valgrind warning about passing uninitialized act->sa_mask to sigaction.  (Bug 538013)  r=gal